@@ -28,7 +28,4 @@
 /* Set the video mode to MODE and return the previous mode.  */
 unsigned char EXPORT_FUNC(grub_vga_set_mode) (unsigned char mode);
 
-/* Return a pointer to the ROM font table.  */
-unsigned char *EXPORT_FUNC(grub_vga_get_font) (void);
-
 #endif /* ! GRUB_VGA_MACHINE_HEADER */
